--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Agu+Display:MORF@34&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agu+Display:MORF@60&family=Special+Elite&family=Teko&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 #root{
-    background-image: linear-gradient(#4261c7, #9999c3);
+    background-image: linear-gradient(#7b8cde, #FFEFD3);
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     min-height: 100vh;
     margin: 0;
-    font-family: 'Lexend Deca', sans-serif;
+    font-family: "Leko", sans-serif;
     font-optical-sizing: auto;
 }
 
-h1{
-    font-family: "Agu Display", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-}
+@layer utilities {
+    .font-morf {
+      font-variation-settings: "MORF" 60;
+    }
+  }
